Fix for episode title overlap

--- a/CSS/css-scyfin/scyfin-theme.css
+++ b/CSS/css-scyfin/scyfin-theme.css
@@ -345,6 +345,28 @@ html {
     -moz-box-ordinal-group: 3;
     box-ordinal-group: 3;
 }
+/* Move episode title */
+.nameContainer {
+    display: -webkit-box;
+    display: -moz-box;
+    display: box;
+    -webkit-box-orient: horizontal;
+    -moz-box-orient: horizontal;
+    box-orient: horizontal;
+}
+.nameContainer .parentName {
+    -webkit-box-ordinal-group: 1;
+    -moz-box-ordinal-group: 1;
+    box-ordinal-group: 1;
+}
+.nameContainer .itemName {
+    -webkit-box-ordinal-group: 2;
+    -moz-box-ordinal-group: 2;
+    box-ordinal-group: 2;
+}
+.itemName.subtitle {
+    margin: 0.45em 0 0 0 !important;
+}
 
 
 
